[gd_scene load_steps=4 format=1]

[ext_resource path="res://placeholders/placeholder.png" type="Texture" id=1]
[ext_resource path="res://item_spawner/item_spawner.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 55.9664, 60.6499 )

[node name="item_spawner" type="Sprite" groups=[
"target",
]]

texture = ExtResource( 1 )
centered = false
region = true
region_rect = Rect2( 317, 130, 68, 68 )
script/script = ExtResource( 2 )
item_type = "Item"
item_ammount = 2

[node name="pick_area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 33.5787, 33.8707 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pick_area"]

transform/pos = Vector2( 33.5787, 33.8707 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="pick_area" to="." method="_on_pick_area_area_enter"]

[connection signal="area_exit" from="pick_area" to="." method="_on_pick_area_area_exit"]


